--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,12 @@
 AllCops:
   TargetRubyVersion: 3.2
 
+Style/Documentation:
+  Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
